--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chatter-laravel/core",
+    "name": "chatter-laravel7",
     "description": "A simple forum package for your laravel app",
     "license": "MIT",
     "authors": [
@@ -13,7 +13,6 @@
         "laravel/passport": "^7 || ^8",
         "mews/purifier": "^3.1",
         "cviebrock/eloquent-sluggable": "^4 || ^6",
-        "laravel-frontend-presets/tailwindcss": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
