--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chatter-laravel7",
+    "name": "nova73-alt/chatter-laravel7",
     "description": "A simple forum package for your laravel app",
     "license": "MIT",
     "authors": [
